Remove coupling of UI and game and player service (#2280)
Simultaneously simplify game and player updates from server messages